--- a/.github/workflows/test-on-develop.yml
+++ b/.github/workflows/test-on-develop.yml
@@ -3,10 +3,10 @@ name: Run Tests on Develop
 on:
   push:
     branches:
-      - develop
+      - feature/Group3
   pull_request:
     branches:
-      - develop
+      - feature/Group3
 
 jobs:
   test:
